--- a/hw2/hw_server/search_engine/templates/search_engine/chart_ct.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart_ct.html
@@ -45,19 +45,17 @@
 			<ul class="sidebar-nav">
 				<li> <a>_</a> </li>
 				<li> <button type="button" id="word0" class="btn btn-outline-secondary">Mask</button> </li>
-				<li> <a>_</a> </li>
 				<li> <button type="button" id="word1" class="btn btn-outline-secondary">Children</button> </li>
-				<li> <a>_</a> </li>
 				<li> <button type="button" id="word2" class="btn btn-outline-secondary">2003</button> </li>
-				<li> <a>_</a> </li>
 				<li> <button type="button" id="word3" class="btn btn-outline-secondary">2019</button> </li>
-				<li> <a>_</a> </li>
 				<li> <button type="button" id="word4" class="btn btn-outline-secondary">pneumothorax</button> </li>
-				<li> <a>_</a> </li>
 				<li> <button type="button" id="word5" class="btn btn-outline-secondary">pneumonia</button> </li>
-				<li> <a>_</a> </li>
 				<li> <button type="button" id="word6" class="btn btn-outline-secondary">image</button> </li>
-				<li> <a>_</a> </li>
+                <li> <button type="button" id="word7" class="btn btn-outline-secondary">adult</button> </li>
+                <li> <button type="button" id="word8" class="btn btn-outline-secondary">bat</button> </li>
+                <li> <button type="button" id="word9" class="btn btn-outline-secondary">immune</button> </li>
+                <li> <button type="button" id="word10" class="btn btn-outline-secondary">wuhan</button> </li>
+                <li> <button type="button" id="word11" class="btn btn-outline-secondary">vaccine</button> </li>
 			</ul>
 		</div> <!-- /#sidebar-wrapper -->
 		{% comment %} radio buttons {% endcomment %}
@@ -96,6 +94,11 @@
 					var freq_pneumothorax = {{ pneumothorax_freq|escapejs}};
 					var freq_pneumonia = {{ pneumonia_freq|escapejs}};
 					var freq_image = {{ image_freq|escapejs}};
+					var freq_adult = {{ adult_freq|escapejs }};
+					var freq_bat = {{ bat_freq|escapejs }};
+					var freq_immune = {{ immune_freq|escapejs }};
+					var freq_wuhan= {{ wuhan_freq|escapejs }};
+					var freq_vaccin= {{ vaccin_freq|escapejs }};
 					var rank_mask = {{ mask_rank|escapejs }};
 					var rank_children = {{ children_rank|escapejs}};
 					var rank_2003 = {{ 2003_rank|escapejs}};
@@ -103,6 +106,11 @@
 					var rank_pneumothorax = {{ pneumothorax_rank|escapejs}};
 					var rank_pneumonia = {{ pneumonia_rank|escapejs}};
 					var rank_image = {{ image_rank|escapejs}};
+					var rank_adult = {{ adult_rank|escapejs }};
+					var rank_bat = {{ bat_rank|escapejs }};
+					var rank_immune = {{ immune_rank|escapejs }};
+					var rank_wuhan = {{ wuhan_rank|escapejs }};
+					var rank_vaccin = {{ vaccin_rank|escapejs }};
 
 
 					function generateData(list, r, thresh) {
@@ -203,6 +211,51 @@
                                 dataset.push({label: "image_ct",
                                     backgroundColor: window.chartColors.red,
                                     data: generatePoint(freq_image, rank_image) })
+                                break;
+
+                            case 7:
+                                dataset.push({label: "adult",
+                                    backgroundColor: window.chartColors.grey,
+                                    data: generateData(freq_adult, rank_adult, 50) })
+                                dataset.push({label: "adult_ct",
+                                    backgroundColor: window.chartColors.red,
+                                    data: generatePoint(freq_adult, rank_adult) })
+                                break;
+
+                            case 8:
+                                dataset.push({label: "bat",
+                                    backgroundColor: window.chartColors.grey,
+                                    data: generateData(freq_bat, rank_bat, 50) })
+                                dataset.push({label: "bat_ct",
+                                    backgroundColor: window.chartColors.red,
+                                    data: generatePoint(freq_bat, rank_bat) })
+                                break;
+
+                            case 9:
+                                dataset.push({label: "immune",
+                                    backgroundColor: window.chartColors.grey,
+                                    data: generateData(freq_immune, rank_immune, 50) })
+                                dataset.push({label: "immune_ct",
+                                    backgroundColor: window.chartColors.red,
+                                    data: generatePoint(freq_immune, rank_immune) })
+                                break;
+
+                            case 10:
+                                dataset.push({label: "wuhan",
+                                    backgroundColor: window.chartColors.grey,
+                                    data: generateData(freq_wuhan, rank_wuhan, 30) })
+                                dataset.push({label: "wuhan_ct",
+                                    backgroundColor: window.chartColors.red,
+                                    data: generatePoint(freq_wuhan, rank_wuhan) })
+                                break;
+
+                            case 11:
+                                dataset.push({label: "vaccin",
+                                    backgroundColor: window.chartColors.grey,
+                                    data: generateData(freq_vaccin, rank_vaccin, 50) })
+                                dataset.push({label: "vaccin_ct",
+                                    backgroundColor: window.chartColors.red,
+                                    data: generatePoint(freq_vaccin, rank_vaccin) })
                                 break;
                         }
 
@@ -337,6 +390,81 @@
 						window.myScatter.update();
 					});
 
+					document.getElementById('word7').addEventListener('click', function() {
+						var ctx = document.getElementById('canvas').getContext('2d');
+						window.myScatter.destroy();
+						window.myScatter = Chart.Scatter(ctx, {
+							data: createChartData(7),
+							options: {
+								title: {
+									display: true,
+									text: "Zipf Chart",
+								},
+							}
+						});
+						window.myScatter.update();
+					});
+
+					document.getElementById('word8').addEventListener('click', function() {
+						var ctx = document.getElementById('canvas').getContext('2d');
+						window.myScatter.destroy();
+						window.myScatter = Chart.Scatter(ctx, {
+							data: createChartData(8),
+							options: {
+								title: {
+									display: true,
+									text: "Zipf Chart",
+								},
+							}
+						});
+						window.myScatter.update();
+					});
+
+					document.getElementById('word9').addEventListener('click', function() {
+						var ctx = document.getElementById('canvas').getContext('2d');
+						window.myScatter.destroy();
+						window.myScatter = Chart.Scatter(ctx, {
+							data: createChartData(9),
+							options: {
+								title: {
+									display: true,
+									text: "Zipf Chart",
+								},
+							}
+						});
+						window.myScatter.update();
+					});
+
+					document.getElementById('word10').addEventListener('click', function() {
+						var ctx = document.getElementById('canvas').getContext('2d');
+						window.myScatter.destroy();
+						window.myScatter = Chart.Scatter(ctx, {
+							data: createChartData(10),
+							options: {
+								title: {
+									display: true,
+									text: "Zipf Chart",
+								},
+							}
+						});
+						window.myScatter.update();
+					});
+
+					document.getElementById('word11').addEventListener('click', function() {
+						var ctx = document.getElementById('canvas').getContext('2d');
+						window.myScatter.destroy();
+						window.myScatter = Chart.Scatter(ctx, {
+							data: createChartData(11),
+							options: {
+								title: {
+									display: true,
+									text: "Zipf Chart",
+								},
+							}
+						});
+						window.myScatter.update();
+					});
+
 					{% comment %} this function listens radio buttons to switch tab {% endcomment %}
 					{#function openClass(className) {#}
 					{#	var i, x;#}
@@ -375,29 +503,94 @@
 				{% comment %} chart above {% endcomment %}
 				<br>
 
-{#				{% comment %} table below {% endcomment %}#}
-{#				{% if not freq|check_empty %}#}
-{#				<table class="table table-striped container" id="container_table">#}
-{#					<thead class="thead-dark">#}
-{#						<tr>#}
-{#						<th scope="col">Frequency</th>#}
-{#						<th scope="col">Word</th>#}
-{#						<th scope="col">#</th>#}
-{#						</tr>#}
-{#					</thead>#}
-{#					<tbody>#}
-{#						{% for i in top_words %}#}
-{#						<tr>#}
-{#						<th scope="row">{{ freq|get_element:forloop.counter0 }}</th>#}
-{#							<td>{{ i }}</td>#}
-{#							<td>{{ forloop.counter0 }}</td>#}
-{#						</tr>#}
-{#						{% endfor %}#}
-{#					</tbody>#}
-{#				</table>#}
-{#				{% endif %}#}
-{#				{% comment %} table above {% endcomment %}#}
-{#				{% comment %} table below {% endcomment %}#}
+				{% comment %} table below {% endcomment %}
+                <h2>Ranking of CT in the following subsets</h2>
+				<table class="table table-striped container" id="container_table">
+					<thead class="thead-dark">
+						<tr>
+						<th scope="col">Rank %</th>
+						<th scope="col">Rank #</th>
+                        <th scope="col">Subset size</th>
+						<th scope="col">Subset</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+						<th scope="row">{{ mask_rank|cal_percentage:mask_subset_article_num }}</th>
+							<td>{{ mask_rank }}</td>
+                            <td>{{ mask_subset_article_num  }}</td>
+							<td>mask</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ children_rank|cal_percentage:children_subset_article_num }}</th>
+							<td>{{ children_rank }}</td>
+                            <td>{{ children_subset_article_num  }}</td>
+							<td>children</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ 2003_rank|cal_percentage:2003_subset_article_num }}</th>
+							<td>{{ 2003_rank }}</td>
+                            <td>{{ 2003_subset_article_num  }}</td>
+							<td>2003</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ 2019_rank|cal_percentage:2019_subset_article_num }}</th>
+							<td>{{ 2019_rank }}</td>
+                            <td>{{ 2019_subset_article_num  }}</td>
+							<td>2019</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ pneumothorax_rank|cal_percentage:pneumothorax_subset_article_num }}</th>
+							<td>{{ pneumothorax_rank }}</td>
+                            <td>{{ pneumothorax_subset_article_num  }}</td>
+							<td>pneumothorax</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ pneumonia_rank|cal_percentage:pneumonia_subset_article_num }}</th>
+							<td>{{ pneumonia_rank }}</td>
+                            <td>{{ pneumonia_subset_article_num  }}</td>
+							<td>pneumonia</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ image_rank|cal_percentage:image_subset_article_num }}</th>
+							<td>{{ image_rank }}</td>
+                            <td>{{ image_subset_article_num  }}</td>
+							<td>image</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ adult_rank|cal_percentage:adult_subset_article_num }}</th>
+							<td>{{ adult_rank }}</td>
+                            <td>{{ adult_subset_article_num  }}</td>
+							<td>adult</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ bat_rank|cal_percentage:bat_subset_article_num }}</th>
+							<td>{{ bat_rank }}</td>
+                            <td>{{ bat_subset_article_num  }}</td>
+							<td>bat</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ immune_rank|cal_percentage:immune_subset_article_num }}</th>
+							<td>{{ immune_rank }}</td>
+                            <td>{{ immune_subset_article_num  }}</td>
+							<td>immune</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ wuhan_rank|cal_percentage:wuhan_subset_article_num }}</th>
+							<td>{{ wuhan_rank }}</td>
+                            <td>{{ wuhan_subset_article_num  }}</td>
+							<td>wuhan</td>
+						</tr>
+                        <tr>
+						<th scope="row">{{ vaccin_rank|cal_percentage:vaccin_subset_article_num }}</th>
+							<td>{{ vaccin_rank }}</td>
+                            <td>{{ vaccin_subset_article_num  }}</td>
+							<td>vaccine</td>
+						</tr>
+					</tbody>
+				</table>
+				{% comment %} table above {% endcomment %}
+				{% comment %} table below {% endcomment %}
 {#				{% if freq|check_empty %}#}
 {#				<table class="table table-striped table-bordered container" id="container_table">#}
 {#					<thead class="thead-dark">#}
