Add cosine similiarity on template

--- a/hw3/hw_server/search_engine/templates/search_engine/w2v_tsne.html
+++ b/hw3/hw_server/search_engine/templates/search_engine/w2v_tsne.html
@@ -78,6 +78,8 @@
 					<canvas id="canvas2" class="container canvas"></canvas>
 				</div>
 
+                <h3>cosine similiarity between "{{ subset_name }}" and "ct" is {{ cos_sim }}</h3>
+
 				{% comment %} <button id="randomizeData">Randomize Data</button> {% endcomment %}
 				<script>
 
